--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.13.0",
+    "@slack/webhook": "^6.1.0",
     "discord.js": "^14.9.0",
     "dotenv": "^16.0.3"
   }
